tests/build/fail/widget/declared_prop_does_not_exist1.stderr
error[E0432]: unresolved import `margin`
 --> $DIR/declared_prop_does_not_exist1.rs:6:9
  |
6 |         margin = { margin: 0 };
  |         ^^^^^^ use of undeclared crate or module `margin`

error: cannot determine resolution for the macro `self::__p_margin::code_gen`
 --> $DIR/declared_prop_does_not_exist1.rs:6:9
  |
6 |         margin = { margin: 0 };
  |         ^^^^^^
  |
  = note: import resolution is stuck, try simplifying macro imports
